[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gizeh"
version = "0.1.11"
description = "Simple vector graphics in Python"
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Zulko"}
]
keywords = ["Cairo", "vector", "graphics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "cairocffi",
    "numpy",
    "importlib-metadata>=1.0; python_version<'3.8'",
]

[project.urls]
Homepage = "https://github.com/Zulko/gizeh"
Repository = "https://github.com/Zulko/gizeh"
Issues = "https://github.com/Zulko/gizeh/issues"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.ruff]
line-length = 88
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["gizeh"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
